--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <body>
     <header>
       <nav class="nav collapsible">
-        <a class="nav__brand" href="/"><img src="images/logo.svg" alt="" /></a>
+        <a class="nav__brand" aria-label="moshify" href="/"
+          ><img src="images/logo.svg" alt=""
+        /></a>
         <svg class="icon icon--white nav__toggler">
           <use href="images/sprite.svg#menu"></use>
         </svg>
@@ -71,6 +73,7 @@
       </header>
       <div class="input-group">
         <input
+          aria-label="Enter domain name"
           type="text"
           class="input"
           placeholder="Enter domain name here..."
